[gd_scene load_steps=14 format=4 uid="uid://crtvo1kuiodhn"]

[ext_resource type="Texture2D" uid="uid://dtlm84p262rea" path="res://4all/4all Tileset/Tilemap/monochrome_tilemap_packed.png" id="1_15vd5"]
[ext_resource type="Script" uid="uid://cntdjygv7yy4f" path="res://Chunks/Chunk04/chunk_04.gd" id="1_yebdi"]
[ext_resource type="Texture2D" uid="uid://b1t8tww3dy52c" path="res://4all/4all Tileset/Tilemap/monochrome_tilemap_transparent_packed.png" id="2_8jrqi"]
[ext_resource type="Script" uid="uid://tcu7k6fi6kk8" path="res://Chunks/Chunk04/tile_map_layer.gd" id="3_2lup8"]
[ext_resource type="PackedScene" uid="uid://cq2dq281hhx3u" path="res://Enemies/Flyin' Enemies/Bat/bat.tscn" id="3_2ped5"]
[ext_resource type="Texture2D" uid="uid://x00ydnsoqyiu" path="res://4all/Door.png" id="5_n0j2k"]
[ext_resource type="Script" uid="uid://cyietd3j4b7fx" path="res://Chunks/Chunk04/enemy_spawner.gd" id="6_lrskc"]
[ext_resource type="PackedScene" uid="uid://ybrdxtmhgqv6" path="res://Enemies/Crawling Enemies/Worm/worm.tscn" id="7_2ped5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d8d0l"]
texture = ExtResource("1_15vd5")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
2:10/0 = 0
3:10/0 = 0
0:10/0 = 0
1:10/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
11:14/0 = 0
10:0/0 = 0
12:0/0 = 0
11:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:12/0 = 0
0:13/0 = 0
0:14/0 = 0
0:15/0 = 0
0:16/0 = 0
0:17/0 = 0
0:18/0 = 0
0:19/0 = 0
0:11/0 = 0
1:12/0 = 0
2:12/0 = 0
1:11/0 = 0
1:13/0 = 0
1:14/0 = 0
1:15/0 = 0
1:16/0 = 0
1:17/0 = 0
1:18/0 = 0
1:19/0 = 0
2:11/0 = 0
2:13/0 = 0
2:14/0 = 0
2:15/0 = 0
2:16/0 = 0
2:17/0 = 0
2:18/0 = 0
2:19/0 = 0
3:11/0 = 0
3:12/0 = 0
3:13/0 = 0
3:14/0 = 0
3:15/0 = 0
3:16/0 = 0
3:17/0 = 0
3:18/0 = 0
3:19/0 = 0
4:10/0 = 0
4:12/0 = 0
4:13/0 = 0
5:13/0 = 0
5:14/0 = 0
5:15/0 = 0
5:16/0 = 0
5:17/0 = 0
5:18/0 = 0
5:19/0 = 0
4:14/0 = 0
4:15/0 = 0
4:16/0 = 0
4:17/0 = 0
4:18/0 = 0
4:19/0 = 0
6:10/0 = 0
6:13/0 = 0
6:14/0 = 0
6:15/0 = 0
6:16/0 = 0
6:17/0 = 0
6:18/0 = 0
6:19/0 = 0
7:19/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
15:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:10/0 = 0
16:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:10/0 = 0
17:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:10/0 = 0
18:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:10/0 = 0
19:11/0 = 0
10:11/0 = 0
10:12/0 = 0
10:14/0 = 0
10:15/0 = 0
10:16/0 = 0
10:17/0 = 0
10:18/0 = 0
10:19/0 = 0
11:19/0 = 0
9:11/0 = 0
9:12/0 = 0
9:14/0 = 0
9:15/0 = 0
9:16/0 = 0
9:17/0 = 0
9:18/0 = 0
9:19/0 = 0
8:11/0 = 0
8:13/0 = 0
8:14/0 = 0
8:15/0 = 0
8:16/0 = 0
8:17/0 = 0
8:18/0 = 0
8:19/0 = 0
7:18/0 = 0
7:14/0 = 0
7:13/0 = 0
7:11/0 = 0
7:15/0 = 0
7:16/0 = 0
7:17/0 = 0
11:11/0 = 0
11:12/0 = 0
11:15/0 = 0
12:16/0 = 0
12:17/0 = 0
12:18/0 = 0
12:19/0 = 0
11:16/0 = 0
11:17/0 = 0
11:18/0 = 0
12:8/0 = 0
12:9/0 = 0
12:11/0 = 0
12:12/0 = 0
12:13/0 = 0
12:14/0 = 0
12:15/0 = 0
13:8/0 = 0
13:9/0 = 0
13:11/0 = 0
13:12/0 = 0
13:13/0 = 0
13:14/0 = 0
13:15/0 = 0
13:16/0 = 0
13:17/0 = 0
13:18/0 = 0
13:19/0 = 0
14:8/0 = 0
14:9/0 = 0
14:11/0 = 0
14:12/0 = 0
14:13/0 = 0
14:14/0 = 0
14:15/0 = 0
14:16/0 = 0
14:17/0 = 0
14:18/0 = 0
14:19/0 = 0
15:19/0 = 0
15:9/0 = 0
15:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:11/0 = 0
15:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:12/0 = 0
15:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:13/0 = 0
15:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:14/0 = 0
15:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:15/0 = 0
15:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:16/0 = 0
15:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:17/0 = 0
15:18/0 = 0
16:8/0 = 0
16:9/0 = 0
16:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:11/0 = 0
16:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:12/0 = 0
16:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:13/0 = 0
16:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:14/0 = 0
16:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:15/0 = 0
16:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:16/0 = 0
16:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:17/0 = 0
16:18/0 = 0
16:19/0 = 0
17:19/0 = 0
17:8/0 = 0
17:9/0 = 0
17:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:11/0 = 0
17:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:12/0 = 0
17:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:13/0 = 0
17:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:14/0 = 0
17:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:15/0 = 0
17:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:16/0 = 0
17:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:17/0 = 0
17:18/0 = 0
11:8/0 = 0
10:8/0 = 0
10:9/0 = 0
11:9/0 = 0
5:12/0 = 0
18:17/0 = 0
18:18/0 = 0
18:19/0 = 0
19:12/0 = 0
19:13/0 = 0
19:14/0 = 0
19:15/0 = 0
19:16/0 = 0
19:17/0 = 0
19:18/0 = 0
19:19/0 = 0
18:8/0 = 0
18:9/0 = 0
18:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:11/0 = 0
18:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:12/0 = 0
18:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:13/0 = 0
18:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:14/0 = 0
18:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:15/0 = 0
18:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:16/0 = 0
18:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:7/0 = 0
19:8/0 = 0
19:9/0 = 0
15:8/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
16:5/0 = 0
15:5/0 = 0
14:5/0 = 0
13:5/0 = 0
12:5/0 = 0
11:5/0 = 0
10:5/0 = 0
18:5/0 = 0
17:5/0 = 0
19:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0o5ut"]
texture = ExtResource("2_8jrqi")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
18:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:12/0/custom_data_0 = true
19:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
18:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:16/0/custom_data_0 = true
19:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
19:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0

[sub_resource type="TileSet" id="TileSet_c5nkj"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 8
custom_data_layer_0/name = "breakable"
custom_data_layer_0/type = 1
sources/1 = SubResource("TileSetAtlasSource_d8d0l")
sources/2 = SubResource("TileSetAtlasSource_0o5ut")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yebdi"]
size = Vector2(211, 174)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yebdi"]
radius = 52.0
height = 236.0

[node name="Chunk04" type="Node2D" groups=["special_chunk"]]
script = ExtResource("1_yebdi")
metadata/_edit_horizontal_guides_ = [0.0, 600.0, 102.0]
metadata/_edit_vertical_guides_ = [16.0, 224.0]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAQARAAoAAAAAAAEAAQARAAoAAAAAAAIAAQARAAoAAAAAAAMAAQARAAoAAAAAAAQAAQARAAoAAAAAAAUAAQARAAoAAAAAAAYAAQATAAkAAAAAAAcAAQASABIAAAAAAAgAAQASABIAAAAAAAkAAQATAAoAAAAAAAoAAQARAA4AAAAAAAsAAQARAA4AAAAAAAwAAQARAA4AAAAAAA0AAQARAA4AAAAOAAAAAQAPAAoAAAAOAAEAAQAPAAoAAAAOAAIAAQAPAAoAAAAOAAMAAQAPAAoAAAAOAAQAAQAPAAoAAAAOAAUAAQAPAAoAAAAOAAYAAQAPAAoAAAAOAAcAAQAPAAoAAAAOAAgAAQAPAAoAAAAOAAkAAQAPAAoAAAAOAAoAAQAPAAoAAAAOAAsAAQAPAAoAAAAOAAwAAQAPAAoAAAAOAA0AAQAPAAoAAAAOAA4AAQAPAAoAAAAAAA4AAQARAAsAAAAOAA8AAQAPAAoAAAAOABAAAQAPAAoAAAAOABEAAQAPAAoAAAAOABIAAQAPAA4AAAAAABIAAQASABIAAAAAABMAAQATAAoAAAAAABQAAQARAA4AAAAAABUAAQARAA4AAAAAABYAAQARAA4AAAAAABcAAQARAA4AAAAAABgAAQARAA4AAAAOABcAAQAPAA4AAAAOABgAAQAPAA4AAAAAABkAAQARAA4AAAAOABMAAQAPAA4AAAAAABwAAQATAAkAAAAOABoAAQAPAA4AAAAOABsAAQAPAA4AAAAOAB4AAQATAAwAAAAOAB8AAQAPAA4AAAAOACAAAQAPAA4AAAAOACEAAQAPAA4AAAAOACIAAQAPAA4AAAAAAB0AAQARAA4AAAAAAB4AAQARAAoAAAAAAB8AAQARAAoAAAAAACAAAQARAAoAAAAAACEAAQARAAoAAAAAABsAAQARAA4AAAAAABoAAQARAA4AAAAOABwAAQAPAAoAAAAOAB0AAQAPAAoAAAAAACIAAQARAA4AAAAAACMAAQARAA4AAAAAACQAAQARAA4AAAAAACUAAQARAA4AAAAOACMAAQAPAA4AAAAOACQAAQAPAA4AAAAOACUAAQAPAA4AAAAOABYAAQAPAA4AAAAOABUAAQAPAA4AAAAOABQAAQAPAA4AAAAOABkAAQAPAA4AAAABAAYAAQARAA0AAAACAAcAAQAQAA0AAAADAAcAAQAQAA0AAAAEAAcAAQAQAA0AAAAFAAcAAQAQAA0AAAAGAAcAAQARABAAAAAFAAgAAQARAA8AAAAEAAgAAQAQAA8AAAADAAgAAQAQAA8AAAACAAkAAQARAA8AAAABAAkAAQAQAA8AAAABAAgAAQASABIAAAABAAcAAQATAAkAAAACAAgAAQATAAoAAAAAABEAAQAQAAkAAAAFABEAAQARAAwAAAAEABEAAQAQAAwAAAADABEAAQAQAAkAAAACABEAAQAQAAkAAAABABEAAQAQAAkAAAADABIAAQARAAsAAAACABMAAQARAAsAAAABABMAAQAQAAsAAAABABIAAQASABIAAAACABIAAQATAAoAAAAMABIAAgAEAAIAAAANABIAAgAGAAIAAAAIABUAAgAEAAIAAAAJABUAAgAFAAIAAAAKABUAAgAFAAIAAAALABUAAgAGAAIAAAAFABoAAgAEAAIAAAAGABoAAgAFAAIAAAAHABoAAgAGAAIAAAACABwAAQARAAwAAAABABwAAQAQAAwAAAAJACEAAgASABAAAAAKACIAAgASABAAAAAJACIAAgASABAAAAAGACMAAgASABAAAAAFACMAAgASABAAAAAHACQAAgASABAAAAAIACQAAgASABAAAAAJACMAAgASABAAAAAJACQAAgASABAAAAAKACQAAgASABAAAAAKACMAAgASABAAAAAGACQAAgASABAAAAAFACQAAgASABAAAAALACMAAgASABAAAAABACAAAgASABAAAAABACQAAgASABAAAAACACQAAgASABAAAAALAAoAAgASABAAAAAMAAoAAgASABAAAAANAAoAAgASABAAAAALAB4AAQAPAAwAAAAMAB4AAQAQAAwAAAANAB4AAQAQAAwAAAAHACMAAgASABAAAAAIACMAAgASABAAAAAIACIAAgASABAAAAAHACIAAgASABAAAAD//w4AAQAQAAsAAAD+/w4AAQAPAAsAAAD//xEAAQAQAAkAAAD+/xEAAQAQAAkAAAD9/xEAAQAQAAkAAAD8/xEAAQAPAAkAAAD+/w0AAQAPAAoAAAD+/wwAAQAPAAoAAAD+/wsAAQAPAAoAAAD+/woAAQAPAAoAAAD//w0AAQAQAAoAAAD//wwAAQAQAAoAAAD//wsAAQAQAAoAAAD//woAAQAQAAoAAAD//wkAAQAQAAoAAAD//wgAAQAQAAoAAAD//wcAAQAQAAoAAAD//wYAAQAQAAoAAAD//wUAAQAQAAoAAAD//wQAAQAQAAoAAAD//wMAAQAQAAoAAAD//wIAAQAQAAoAAAD//wEAAQAQAAoAAAD//wAAAQAQAAoAAAD7/xIAAQAQAA0AAAD6/xIAAQAQAA0AAAD5/xIAAQAQAA0AAAD4/xIAAQAQAA0AAAD3/xIAAQAQAA0AAAD2/xEAAQARAA0AAAD9/wIAAQASABIAAAD9/wMAAQAPAAoAAAD9/wQAAQAPAAoAAAD9/wUAAQAPAAoAAAD9/wYAAQAPAAoAAAD9/wcAAQAPAAoAAAD9/wgAAQAPAAoAAAD+/wIAAQASABIAAAD+/wMAAQASABIAAAD+/wQAAQASABIAAAD+/wUAAQASABIAAAD+/wYAAQASABIAAAD+/wcAAQASABIAAAD+/wgAAQASABIAAAD+/wkAAQATAA8AAAD9/wkAAQAPAAsAAAD1/xAAAQARAAoAAAD1/w8AAQARAAoAAAD1/w4AAQARAAoAAAD1/w0AAQARAAoAAAD1/wwAAQARAAoAAAD1/wsAAQARAAoAAAD1/woAAQARAAoAAAD2/wkAAQARAAsAAAD1/wkAAQATAAoAAAD2/wgAAQARAAoAAAD2/wcAAQARAAoAAAD2/wYAAQARAAoAAAD2/wUAAQARAAoAAAD2/wQAAQARAAoAAAD2/wMAAQARAAoAAAD2/wIAAQASABIAAAD2/xIAAQATAAkAAAD1/xEAAQATAAkAAAD8/xIAAQATAAwAAAD9/xIAAQASABIAAAD+/xIAAQASABIAAAD//xIAAQASABIAAAD//xMAAQASABIAAAD//xQAAQASABIAAAD//xUAAQASABIAAAD//xYAAQASABIAAAD+/xMAAQASABIAAAD+/xQAAQASABIAAAD+/xUAAQASABIAAAD+/xYAAQASABIAAAD+/xcAAQASABIAAAD+/xgAAQASABIAAAD+/xkAAQASABIAAAD+/xoAAQASABIAAAD//xkAAQASABIAAAD//xgAAQASABIAAAD//xcAAQASABIAAAD//xoAAQASABIAAAD9/xMAAQASABIAAAD8/xMAAQASABIAAAD7/xMAAQASABIAAAD6/xMAAQASABIAAAD5/xMAAQASABIAAAD4/xMAAQASABIAAAD3/xMAAQASABIAAAD2/xMAAQASABIAAAD2/xQAAQASABIAAAD2/xUAAQASABIAAAD2/xYAAQASABIAAAD2/xcAAQASABIAAAD2/xgAAQASABIAAAD2/xkAAQASABIAAAD2/xoAAQASABIAAAD3/xoAAQASABIAAAD4/xoAAQASABIAAAD5/xoAAQASABIAAAD6/xoAAQASABIAAAD7/xoAAQASABIAAAD8/xoAAQASABIAAAD9/xoAAQASABIAAAD3/xQAAQASABIAAAD3/xUAAQASABIAAAD3/xYAAQASABIAAAD3/xcAAQASABIAAAD3/xgAAQASABIAAAD3/xkAAQASABIAAAD4/xQAAQASABIAAAD4/xUAAQASABIAAAD4/xYAAQASABIAAAD4/xcAAQASABIAAAD4/xgAAQASABIAAAD4/xkAAQASABIAAAD5/xQAAQASABIAAAD5/xUAAQASABIAAAD5/xYAAQASABIAAAD5/xcAAQASABIAAAD5/xgAAQASABIAAAD5/xkAAQASABIAAAD6/xQAAQASABIAAAD6/xUAAQASABIAAAD6/xYAAQASABIAAAD6/xcAAQASABIAAAD6/xgAAQASABIAAAD6/xkAAQASABIAAAD7/xQAAQASABIAAAD7/xUAAQASABIAAAD7/xYAAQASABIAAAD7/xcAAQASABIAAAD7/xgAAQASABIAAAD7/xkAAQASABIAAAD8/xQAAQASABIAAAD8/xUAAQASABIAAAD8/xYAAQASABIAAAD8/xcAAQASABIAAAD8/xgAAQASABIAAAD8/xkAAQASABIAAAD9/xQAAQASABIAAAD9/xUAAQASABIAAAD9/xYAAQASABIAAAD9/xcAAQASABIAAAD9/xgAAQASABIAAAD9/xkAAQASABIAAADz/xEAAQASABIAAADz/xIAAQASABIAAADz/xMAAQASABIAAADz/xQAAQASABIAAADz/xUAAQASABIAAADz/xYAAQASABIAAADz/xcAAQASABIAAADz/xgAAQASABIAAADz/xkAAQASABIAAADz/xoAAQASABIAAAD0/xEAAQASABIAAAD0/xIAAQASABIAAAD0/xMAAQASABIAAAD0/xQAAQASABIAAAD0/xUAAQASABIAAAD0/xYAAQASABIAAAD0/xcAAQASABIAAAD0/xgAAQASABIAAAD0/xkAAQASABIAAAD0/xoAAQASABIAAAD1/xIAAQASABIAAAD1/xMAAQASABIAAAD1/xQAAQASABIAAAD1/xUAAQASABIAAAD1/xYAAQASABIAAAD1/xcAAQASABIAAAD1/xgAAQASABIAAAD1/xkAAQASABIAAAD1/xoAAQASABIAAADz/wkAAQASABIAAADz/woAAQASABIAAADz/wsAAQASABIAAADz/wwAAQASABIAAADz/w0AAQASABIAAADz/w4AAQASABIAAADz/w8AAQASABIAAADz/xAAAQASABIAAAD0/wkAAQASABIAAAD0/woAAQASABIAAAD0/wsAAQASABIAAAD0/wwAAQASABIAAAD0/w0AAQASABIAAAD0/w4AAQASABIAAAD0/w8AAQASABIAAAD0/xAAAQASABIAAADz/wIAAQASABIAAADz/wMAAQASABIAAADz/wQAAQASABIAAADz/wUAAQASABIAAADz/wYAAQASABIAAADz/wcAAQASABIAAADz/wgAAQASABIAAAD0/wIAAQASABIAAAD0/wMAAQASABIAAAD0/wQAAQASABIAAAD0/wUAAQASABIAAAD0/wYAAQASABIAAAD0/wcAAQASABIAAAD0/wgAAQASABIAAAD1/wIAAQASABIAAAD1/wMAAQASABIAAAD1/wQAAQASABIAAAD1/wUAAQASABIAAAD1/wYAAQASABIAAAD1/wcAAQASABIAAAD1/wgAAQASABIAAADz/wEAAQASABIAAAD0/wEAAQASABIAAAD1/wEAAQASABIAAAD2/wEAAQASABIAAAD3/wEAAQASABIAAAD3/wIAAQASABIAAAD4/wEAAQASABIAAAD4/wIAAQASABIAAAD5/wEAAQASABIAAAD5/wIAAQASABIAAAD6/wEAAQASABIAAAD6/wIAAQASABIAAAD7/wEAAQASABIAAAD7/wIAAQASABIAAAD8/wEAAQASABIAAAD8/wIAAQASABIAAAD9/wEAAQASABIAAAD+/wEAAQASABIAAAD2/w8AAgABAAoAAAD2/xAAAgABAAsAAAD+/xAAAgAEAAkAAAD7/x4AAQASABIAAAD7/x0AAQASABIAAAD7/xwAAQASABIAAAD7/xsAAQASABIAAAD6/xsAAQASABIAAAD5/xsAAQASABIAAAD4/xsAAQASABIAAAD3/xsAAQASABIAAAD2/xsAAQASABIAAAD1/xsAAQASABIAAAD0/xsAAQASABIAAADz/xsAAQASABIAAADz/xwAAQASABIAAADz/x0AAQASABIAAADz/x4AAQASABIAAADz/x8AAQASABIAAADz/yAAAQASABIAAADz/yEAAQASABIAAADz/yIAAQASABIAAADz/yMAAQASABIAAADz/yQAAQASABIAAADz/yUAAQASABIAAAD0/yUAAQASABIAAAD0/yQAAQASABIAAAD0/yMAAQASABIAAAD0/yIAAQASABIAAAD0/yEAAQASABIAAAD0/yAAAQASABIAAAD0/x8AAQASABIAAAD0/x4AAQASABIAAAD0/x0AAQASABIAAAD0/xwAAQASABIAAAD1/xwAAQASABIAAAD1/x0AAQASABIAAAD1/x4AAQASABIAAAD1/x8AAQASABIAAAD1/yAAAQASABIAAAD1/yEAAQASABIAAAD1/yIAAQASABIAAAD1/yMAAQASABIAAAD1/yQAAQASABIAAAD1/yUAAQASABIAAAD2/yUAAQASABIAAAD2/yQAAQASABIAAAD2/yMAAQASABIAAAD2/yIAAQASABIAAAD2/yEAAQASABIAAAD2/yAAAQASABIAAAD2/x8AAQASABIAAAD2/x4AAQASABIAAAD2/x0AAQASABIAAAD2/xwAAQASABIAAAD3/xwAAQASABIAAAD3/x0AAQASABIAAAD3/x4AAQASABIAAAD3/x8AAQASABIAAAD3/yAAAQASABIAAAD3/yEAAQASABIAAAD3/yIAAQASABIAAAD3/yMAAQASABIAAAD3/yQAAQASABIAAAD3/yUAAQASABIAAAD4/yUAAQASABIAAAD4/yQAAQASABIAAAD4/yMAAQASABIAAAD4/yIAAQASABIAAAD4/yEAAQASABIAAAD4/yAAAQASABIAAAD4/x8AAQASABIAAAD4/x4AAQASABIAAAD4/x0AAQASABIAAAD4/xwAAQASABIAAAD5/xwAAQASABIAAAD5/x0AAQASABIAAAD5/x4AAQASABIAAAD5/x8AAQASABIAAAD5/yAAAQASABIAAAD5/yEAAQASABIAAAD5/yIAAQASABIAAAD5/yMAAQASABIAAAD5/yQAAQASABIAAAD5/yUAAQASABIAAAD6/yUAAQASABIAAAD6/yQAAQASABIAAAD6/yMAAQASABIAAAD6/yIAAQASABIAAAD6/yEAAQASABIAAAD6/yAAAQASABIAAAD6/x8AAQASABIAAAD6/x4AAQASABIAAAD6/x0AAQASABIAAAD6/xwAAQASABIAAAD7/x8AAQASABIAAAD7/yAAAQASABIAAAD7/yEAAQASABIAAAD7/yIAAQASABIAAAD7/yMAAQASABIAAAD7/yQAAQASABIAAAD7/yUAAQASABIAAAD8/yUAAQASABIAAAD8/yQAAQASABIAAAD8/yMAAQASABIAAAD8/yIAAQASABIAAAD8/yEAAQASABIAAAD8/yAAAQASABIAAAD8/x8AAQASABIAAAD8/x4AAQASABIAAAD8/x0AAQASABIAAAD8/xwAAQASABIAAAD8/xsAAQASABIAAAD9/xsAAQASABIAAAD9/xwAAQASABIAAAD9/x0AAQASABIAAAD9/x4AAQASABIAAAD9/x8AAQASABIAAAD9/yAAAQASABIAAAD9/yEAAQASABIAAAD9/yIAAQASABIAAAD9/yMAAQASABIAAAD9/yQAAQASABIAAAD9/yUAAQASABIAAAD+/yUAAQASABIAAAD+/yQAAQASABIAAAD+/yMAAQASABIAAAD+/yIAAQASABIAAAD+/yEAAQASABIAAAD+/yAAAQASABIAAAD+/x8AAQASABIAAAD+/x4AAQASABIAAAD+/x0AAQASABIAAAD+/xwAAQASABIAAAD+/xsAAQASABIAAAD//xsAAQASABIAAAD//xwAAQASABIAAAD//x0AAQASABIAAAD//x4AAQASABIAAAD//x8AAQASABIAAAD//yAAAQASABIAAAD//yEAAQASABIAAAD//yIAAQASABIAAAD//yMAAQASABIAAAD//yQAAQASABIAAAD//yUAAQASABIAAAA=")
tile_set = SubResource("TileSet_c5nkj")
script = ExtResource("3_2lup8")

[node name="Entrance" type="Marker2D" parent="."]
position = Vector2(122, 0)

[node name="Exit" type="Marker2D" parent="."]
position = Vector2(122, 600)

[node name="SpecialDoor" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpecialDoor"]
position = Vector2(-108, 218)
shape = SubResource("RectangleShape2D_yebdi")

[node name="RoomCamera" type="Camera2D" parent="."]
position = Vector2(-94, 216)
zoom = Vector2(1.3, 1.3)

[node name="FreezeTrigger" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="FreezeTrigger"]
position = Vector2(-83, 270)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_yebdi")

[node name="Sprite2D" type="Sprite2D" parent="FreezeTrigger"]
modulate = Color(1, 1, 1, 0.5058824)
position = Vector2(32.000004, 247)
rotation = 0.31415927
scale = Vector2(0.9, 0.9)
texture = ExtResource("5_n0j2k")

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource("6_lrskc")
enemy_scenes = Array[PackedScene]([ExtResource("3_2ped5"), ExtResource("7_2ped5")])
spawn_chance = 1.0

[node name="SpawnPoints" type="Node2D" parent="EnemySpawner"]

[node name="EnemySpawn1" type="Marker2D" parent="EnemySpawner/SpawnPoints"]
position = Vector2(61, 61)

[node name="EnemySpawn2" type="Marker2D" parent="EnemySpawner/SpawnPoints"]
position = Vector2(196, 99)

[node name="EnemySpawn3" type="Marker2D" parent="EnemySpawner/SpawnPoints"]
position = Vector2(69, 245)

[node name="EnemySpawn4" type="Marker2D" parent="EnemySpawner/SpawnPoints"]
position = Vector2(104, 395)

[node name="EnemySpawn5" type="Marker2D" parent="EnemySpawner/SpawnPoints"]
position = Vector2(201, 441)
